--- a/public/assets/views/login_registration.html
+++ b/public/assets/views/login_registration.html
@@ -68,7 +68,7 @@
 					</div>
 					<div class="form-actions">
 						<p>
-							By registring at SPORTOFITT as SELECT partner you agree with the <a href="#">terms & conditions</a> of this agreement.
+							By registring at SPORTOFITT as SELECT partner you agree with the <a ui-sref="partner-agreement">terms & conditions</a> of this agreement.
 						</p>
 						<p>
 							Already have an account? <a ui-sref="login.signin"> Log-in </a>
