--- a/public/front/views/listings/index.html
+++ b/public/front/views/listings/index.html
@@ -77,7 +77,7 @@
                                         <div class="item">
                                             <div class="image">
                                                 <div class="quick-view"><i class="fa fa-eye"></i><span>Quick View</span></div>
-                                                <a href="item-detail.html">
+                                                <a ng-href="#/venue/{{item.facilityId}}">
                                                     <div class="overlay">
                                                         <div class="inner">
                                                             <div class="content">
