search on all pages

--- a/public/front/views/login/index.html
+++ b/public/front/views/login/index.html
@@ -1,10 +1,8 @@
 <!-- Page Canvas-->
 <div id="page-canvas">
     <!--Off Canvas Navigation-->
-    <nav class="off-canvas-navigation">
-        <header>Navigation</header>
-        <div class="main-navigation navigation-off-canvas"></div>
-    </nav>
+
+    <search-form></search-form>
     <!--end Off Canvas Navigation-->
 
     <!--&lt;!&ndash;Sub Header&ndash;&gt;-->
