--- a/public/front/views/register/index.html
+++ b/public/front/views/register/index.html
@@ -1,9 +1,6 @@
 <div id="page-canvas">
     <!--Off Canvas Navigation-->
-    <nav class="off-canvas-navigation">
-        <header>Navigation</header>
-        <div class="main-navigation navigation-off-canvas"></div>
-    </nav>
+    <search-form></search-form>
     <!--Page Content-->
 <div id="page-content">
     <section class="container">
