--- a/public/front/views/layouts/navbar.html
+++ b/public/front/views/layouts/navbar.html
@@ -12,21 +12,20 @@
                 <ul ng-if="!isAuthenticated" class="user-area">
                     <li><a ui-sref="app.login">Sign In</a></li>
                     <li><a ui-sref="app.register"><strong>Register</strong></a></li>
-                      </ul>
+                </ul>
                 <ul ng-if="isAuthenticated" class="user-area">
-                    <li><a ui-sref="app.logout">Sign Out</a></li>
-                   <li><a ui-sref="app.profile"><strong>Profile</strong></a></li>
+                    <li><a ui-sref="app.profile"><strong>Profile</strong></a></li>
                     <li><a ui-sref="app.mybookings"><strong>My Bookings</strong></a></li>
-
+                    <li><a ui-sref="app.logout">Sign Out</a></li>
                 </ul>
 
-                <div class="toggle-navigation">
-                    <div class="icon">
-                        <div class="line"></div>
-                        <div class="line"></div>
-                        <div class="line"></div>
-                    </div>
-                </div>
+                <!--<div class="toggle-navigation">-->
+                    <!--<div class="icon">-->
+                        <!--<div class="line"></div>-->
+                        <!--<div class="line"></div>-->
+                        <!--<div class="line"></div>-->
+                    <!--</div>-->
+                <!--</div>-->
             </div>
         </nav>
     </div>
