--- a/public/front/views/profile/index.html
+++ b/public/front/views/profile/index.html
@@ -1,11 +1,7 @@
 <!-- Page Canvas-->
 <div id="page-canvas">
     <!--Off Canvas Navigation-->
-    <nav class="off-canvas-navigation">
-        <header>Navigation</header>
-        <div class="main-navigation navigation-off-canvas"></div>
-    </nav>
-    <!--end Off Canvas Navigation-->
+    <search-form></search-form>
 
 
     <!--Page Content-->
