--- a/public/front/views/layouts/search-form.html
+++ b/public/front/views/layouts/search-form.html
@@ -1,6 +1,6 @@
 <!--Sub Header-->
-<section class="sub-header" ng-init="vm.showForm=false">
-    <div class="search-bar horizontal" data-ng-show="vm.showForm == true" >
+<section class="sub-header">
+    <div class="search-bar horizontal">
         <div class="content">
             <div class="container">
                 <form class="main-search" role="form" data-ng-submit="vm.getData(vm.filter)">
@@ -33,24 +33,24 @@
             <!-- /.container -->
         </div>
     </div>
-    <!-- /.search-bar -->
-    <div class="breadcrumb-wrapper">
-        <div class="container">
-            <div class="redefine-search">
-                <a data-ng-click="vm.showForm = !vm.showForm" class="inner" data-toggle="collapse" aria-expanded="false" aria-controls="redefine-search-form">
-                    <span class="icon"></span>
-                    <span>Redefine Search</span>
-                </a>
-            </div>
-            <ol class="breadcrumb">
-                <li></li>
-                <!--<li><a href="index-directory.html"><i class="fa fa-home"></i></a></li>-->
-                <!--<li><a href="#">Page</a></li>-->
-                <!--<li class="active">{{vm.categorySelected}}</li>-->
-            </ol>
-            <!-- /.breadcrumb-->
-        </div>
-        <!-- /.container-->
-    </div>
+    <!--&lt;!&ndash; /.search-bar &ndash;&gt;-->
+    <!--<div class="breadcrumb-wrapper">-->
+        <!--<div class="container">-->
+            <!--<div class="redefine-search">-->
+                <!--<a data-ng-click="vm.showForm = !vm.showForm" class="inner" data-toggle="collapse" aria-expanded="false" aria-controls="redefine-search-form">-->
+                    <!--<span class="icon"></span>-->
+                    <!--<span>Redefine Search</span>-->
+                <!--</a>-->
+            <!--</div>-->
+            <!--<ol class="breadcrumb">-->
+                <!--<li></li>-->
+                <!--&lt;!&ndash;<li><a href="index-directory.html"><i class="fa fa-home"></i></a></li>&ndash;&gt;-->
+                <!--&lt;!&ndash;<li><a href="#">Page</a></li>&ndash;&gt;-->
+                <!--&lt;!&ndash;<li class="active">{{vm.categorySelected}}</li>&ndash;&gt;-->
+            <!--</ol>-->
+            <!--&lt;!&ndash; /.breadcrumb&ndash;&gt;-->
+        <!--</div>-->
+        <!--&lt;!&ndash; /.container&ndash;&gt;-->
+    <!--</div>-->
     <!-- /.breadcrumb-wrapper-->
 </section>
