area name on search page

--- a/public/front/views/listings/index.html
+++ b/public/front/views/listings/index.html
@@ -46,7 +46,7 @@
                                                     <span>{{item.type}}</span>
                                                 </div>
                                                     <div class="type pull-right">
-                                                        <span>{{item.area_id}}</span>
+                                                        <span>{{item.areaName}}</span>
                                                     </div>
                                             </div>
 
